# Code

Android/app/: build.gradle.kts
IDEA/ArrayVsList/: pom.xml
IDEA/Arrays und so/: zahlen.txt
IDEA/CarConfiguratorFX/: pom.xml
IDEA/Char Counting/: zeug.txt
IDEA/Exceptions/: pom.xml  text.txt
IDEA/Files Example/: zeug.txt
IDEA/HTTPServerDemo/: pom.xml
IDEA/Java Multidimensional Arrays/: course-info.yaml  settings.gradle
IDEA/Planes/: route_airbus.txt  route_boeing.txt
IDEA/Raute/: pom.xml
IDEA/SEW2/: course-info.yaml  settings.gradle
IDEA/SEW2 2AHITS Test/: course-info.yaml  settings.gradle
IDEA/SEW2 Testvorbereitung/: course-info.yaml  settings.gradle
IDEA/SchleifenDemo/: pom.xml
IDEA/Taschenrechner/: fickdich.html  readme.txt
IDEA/Test/: TwoNumbers.txt
IDEA/Test Zeug/: pom.xml
IDEA/Threads/: pom.xml
IDEA/WeatherServer/: pom.xml
Java/AlgoPerformance/: pom.xml
Java/Alixandrische Bibliothek/: NotNovels.txt
Java/AsciiDocDemo/: Simple.java  Test.adoc
Java/Battleship/: pom.xml
Java/BuilderPatternUndSo/: pom.xml
Java/CarConfiguratorFX/: NOTES.md
Java/DatenstruckturenDemo/: pom.xml
Lua/: beacon.lua
Rust/data_generator/: Cargo.toml  docker-compose.yaml  fake_dataset.toml
Rust/data_generator/src/: main.rs
Rust/insy_db/: Cargo.toml
Rust/insy_db/src/: main.rs
Scripts/: ACL.ps1  ACLExample.ps1  choco-script-dev.ps1  choco-script-gen.ps1  classList.csv  idk.ps1  krasses Gaming Script yoooooo.ps1  newScript.ps1  results.csv  script.ps1  script.sh  script.sql  script.txt
Workspaces/: Proj Nov 8.code-workspace
(+426 files in other folders)
