[package]
name = "insy_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "*"
postgres = "*"
toml = "*"
fake = "*"
rayon = "*"
indicatif = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"